--- a/src/main/webapp/html/parts.html
+++ b/src/main/webapp/html/parts.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script src="scripts.js"></script>
+<script src="../js/scriptsParts.js"></script>
 <style>
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
@@ -49,26 +49,24 @@ body {font-family: "Lato", sans-serif}
   	<div id="actionContent" style="margin-top:32px">
 	  	<div id="actionCreate" style="display:none">
 	  		<form action="javascript:createPart()" method="post">
-	            Numer katalogowy: <input id="stockNumber" type="text"/></br>
-	            Nazwa: <input id="name" type="text"/></br>
-	            Stan magazynowy: <input id="amount" type="number"/></br>
-	            Cena detaliczna: <input id="price" type="number"/></br>
-	            Kategoria: <input id="category" type="text"/></br>
-	            ID magazynu: <input id="warehouseId" type="number"/></br>
-	            ID producenta: <input id="producerId" type="number"/></br>
+	            Numer katalogowy: <input id="stockNumberCreate" type="text"/></br>
+	            Nazwa: <input id="nameCreate" type="text"/></br>
+	            Stan magazynowy: <input id="amountCreate" type="number"/></br>
+	            Cena detaliczna: <input id="priceCreate" type="number"/></br>
+	            Kategoria: <input id="categoryCreate" type="text"/></br>
+	            ID magazynu: <input id="warehouseIdCreate" type="number"/></br>
+	            ID producenta: <input id="producerIdCreate" type="number"/></br>
 	            <p class="w3-center"><input type="submit" name="createPartSubmit" value="Dodaj!"/></p>
 	        </form>
 	  	</div>
 	  	<div id="actionUpdate" style="display:none">
 	  		<form action="javascript:updatePart()" method="post">
-	  			ID części: <input id="partId" type="number"/></br>
-	            Numer katalogowy: <input id="stockNumber" type="text"/></br>
-	            Nazwa: <input id="name" type="text"/></br>
-	            Stan magazynowy: <input id="amount" type="number"/></br>
-	            Cena detaliczna: <input id="price" type="number"/></br>
-	            Kategoria: <input id="category" type="text"/></br>
-	            ID magazynu: <input id="warehouseId" type="number"/></br>
-	            ID producenta: <input id="producerId" type="number"/></br>
+	  			ID części: <input id="partIdUpdate" type="number"/></br>
+	            Numer katalogowy: <input id="stockNumberUpdate" type="text"/></br>
+	            Nazwa: <input id="nameUpdate" type="text"/></br>
+	            Stan magazynowy: <input id="amountUpdate" type="number"/></br>
+	            Cena detaliczna: <input id="priceUpdate" type="number"/></br>
+	            Kategoria: <input id="categoryUpdate" type="text"/></br>
 	            <p class="w3-center"><input type="submit" name="updatePartSubmit" value="Edytuj!"/></p>
 	        </form>
 	  	</div>
@@ -90,8 +88,8 @@ body {font-family: "Lato", sans-serif}
             </table>
 	  	</div>
 	  	<div id="actionDelete" style="display:none">
-	  		<form action="javascript:updatePart()" method="post">
-	  			ID części: <input id="partId" type="number"/>
+	  		<form action="javascript:deletePart()" method="post">
+	  			ID części: <input id="partIdDelete" type="number"/>
 	            <p class="w3-center"><input type="submit" name="deletePartSubmit" value="Usuń!"/></p>
 	        </form>
 	  	</div>
