Added storing data in session memory

--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -45,10 +45,10 @@ body {font-family: "Lato", sans-serif}
 	        Login: <input id="login" type="text" required/></br>
 	        Hasło: <input id="password" type="password" required/></br>
 	        <select id="selectedRole">
-                <option value="warehousemanRole">Magazynier</option>
-                <option value="logisticianRole">Logistyk</option>
-                <option value="hrEmployeeRole">Pracownik HR</option>
-                <option value="managerRole">Kierownik</option>
+                <option value="warehouseman">Magazynier</option>
+                <option value="logistician">Logistyk</option>
+                <option value="hrEmployee">Pracownik HR</option>
+                <option value="manager">Kierownik</option>
             </select>
 	        <p class="w3-center"><input type="submit" name="loginSubmit" value="Zaloguj"/></p>
 	    </form>
