--- a/src/main/webapp/html/producers.html
+++ b/src/main/webapp/html/producers.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script src="scripts.js"></script>
+<script src="../js/scriptsProducers.js"></script>
 <style>
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
@@ -39,9 +39,48 @@ body {font-family: "Lato", sans-serif}
 
 
 <div class="w3-content" style="max-width:1920px;margin-top:46px">
-
-  <div class="w3-black" align="center" id="localization">
-  
+  <div class="w3-container w3-content w3-padding-64" align="center" id="mainContainer">
+  	<div id="buttonRow">
+  		<button type="button" onclick="javascript:actionCreate()">Dodaj</button>
+  		<button type="button" onclick="javascript:actionUpdate()">Edytuj</button>
+  		<button type="button" onclick="javascript:actionRead()">Wyświetl</button>
+  		<button type="button" onclick="javascript:actionDelete()">Usuń</button>
+  	</div>
+  	<div id="actionContent" style="margin-top:32px">
+	  	<div id="actionCreate" style="display:none">
+	  		<form action="javascript:createProducer()" method="post">
+	            Nazwa: <input id="nameCreate" type="text"/></br>
+	            Kraj: <input id="countryCreate" type="text"/></br>
+	            <p class="w3-center"><input type="submit" name="createProducerSubmit" value="Dodaj!"/></p>
+	        </form>
+	  	</div>
+	  	<div id="actionUpdate" style="display:none">
+	  		<form action="javascript:updateProducer()" method="post">
+	  			ID producenta: <input id="producerIdUpdate" type="number"/></br>
+	            Nazwa: <input id="nameUpdate" type="text"/></br>
+	            Kraj: <input id="countryUpdate" type="text"/></br>
+	            <p class="w3-center"><input type="submit" name="updateProducerSubmit" value="Edytuj!"/></p>
+	        </form>
+	  	</div>
+	  	<div id="actionRead" style="display:none">
+	  		<table align="center" id="producersTable">
+                <thead>
+                    <tr>
+                    	<th>ID producenta</th>
+                        <th>Nazwa</th>
+                        <th>Kraj</th>
+                    </tr>
+                </thead>
+                <tbody id="producersTableBody"></tbody>
+            </table>
+	  	</div>
+	  	<div id="actionDelete" style="display:none">
+	  		<form action="javascript:deleteProducer()" method="post">
+	  			ID producenta: <input id="producerIdDelete" type="number"/>
+	            <p class="w3-center"><input type="submit" name="deleteProducerSubmit" value="Usuń!"/></p>
+	        </form>
+	  	</div>
+  	</div>
   </div>
 </div>
     
