--- a/src/main/webapp/html/suppliers.html
+++ b/src/main/webapp/html/suppliers.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script src="scripts.js"></script>
+<script src="../js/scriptsSuppliers.js"></script>
 <style>
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
@@ -39,9 +39,54 @@ body {font-family: "Lato", sans-serif}
 
 
 <div class="w3-content" style="max-width:1920px;margin-top:46px">
-
-  <div class="w3-black" align="center" id="localization">
-  
+  <div class="w3-container w3-content w3-padding-64" align="center" id="mainContainer">
+  	<div id="buttonRow">
+  		<button type="button" onclick="javascript:actionCreate()">Dodaj</button>
+  		<button type="button" onclick="javascript:actionUpdate()">Edytuj</button>
+  		<button type="button" onclick="javascript:actionRead()">Wyświetl</button>
+  		<button type="button" onclick="javascript:actionDelete()">Usuń</button>
+  	</div>
+  	<div id="actionContent" style="margin-top:32px">
+	  	<div id="actionCreate" style="display:none">
+	  		<form action="javascript:createSupplier()" method="post">
+	            Nazwa: <input id="nameCreate" type="text"/></br>
+	            Miasto: <input id="cityCreate" type="text"/></br>
+	            Telefon: <input id="phoneNumberCreate" type="text"/></br>
+	            Data rozpoczęcia współpracy: <input id="cooperationStartDateCreate" type="date"/></br>
+	            <p class="w3-center"><input type="submit" name="createSupplierSubmit" value="Dodaj!"/></p>
+	        </form>
+	  	</div>
+	  	<div id="actionUpdate" style="display:none">
+	  		<form action="javascript:updateSupplier()" method="post">
+	  			ID: <input id="supplierIdUpdate" type="number"/></br>
+	  			Nazwa: <input id="nameUpdate" type="text"/></br>
+	            Miasto: <input id="cityUpdate" type="text"/></br>
+	            Telefon: <input id="phoneNumberUpdate" type="text"/></br>
+	            Data rozpoczęcia współpracy: <input id="cooperationStartDateUpdate" type="date"/></br>
+	            <p class="w3-center"><input type="submit" name="updateSupplierSubmit" value="Edytuj!"/></p>
+	        </form>
+	  	</div>
+	  	<div id="actionRead" style="display:none">
+	  		<table align="center" id="suppliersTable">
+                <thead>
+                    <tr>
+                    	<th>ID dostawcy</th>
+                        <th>Nazwa</th>
+                        <th>Miasto</th>
+                        <th>Telefon</th>
+                        <th>Data rozpoczęcia współpracy</th>
+                    </tr>
+                </thead>
+                <tbody id="suppliersTableBody"></tbody>
+            </table>
+	  	</div>
+	  	<div id="actionDelete" style="display:none">
+	  		<form action="javascript:deleteSupplier()" method="post">
+	  			ID dostawcy: <input id="supplierIdDelete" type="number"/>
+	            <p class="w3-center"><input type="submit" name="deleteSupplierSubmit" value="Usuń!"/></p>
+	        </form>
+	  	</div>
+  	</div>
   </div>
 </div>
     
