--- a/src/main/webapp/html/supplies.html
+++ b/src/main/webapp/html/supplies.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script src="scripts.js"></script>
+<script src="../js/scriptsSupplies.js"></script>
 <style>
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
@@ -39,9 +39,60 @@ body {font-family: "Lato", sans-serif}
 
 
 <div class="w3-content" style="max-width:1920px;margin-top:46px">
-
-  <div class="w3-black" align="center" id="localization">
-  
+  <div class="w3-container w3-content w3-padding-64" align="center" id="mainContainer">
+  	<div id="buttonRow">
+  		<button type="button" onclick="javascript:actionCreate()">Dodaj</button>
+  		<button type="button" onclick="javascript:actionUpdate()">Edytuj</button>
+  		<button type="button" onclick="javascript:actionRead()">Wyświetl</button>
+  		<button type="button" onclick="javascript:actionDelete()">Usuń</button>
+  	</div>
+  	<div id="actionContent" style="margin-top:32px">
+	  	<div id="actionCreate" style="display:none">
+	  		<form action="javascript:createSupply()" method="post">
+	            Numer dostawy: <input id="shippingNumberCreate" type="text"/></br>
+	            Data: <input id="shippingDateCreate" type="date"/></br>
+	            Godzina: <input id="shippingTimeCreate" type="time"/></br>
+	            ID dostawcy: <input id="supplierIdCreate" type="number"/></br>
+	            ID magazyniera: <input id="warehousemanIdCreate" type="number"/></br>
+	            ID magazynu: <input id="warehouseIdCreate" type="number"/></br>
+	            <p class="w3-center"><input type="submit" name="createSupplySubmit" value="Dodaj!"/></p>
+	        </form>
+	  	</div>
+	  	<div id="actionUpdate" style="display:none">
+	  		<form action="javascript:updateSupply()" method="post">
+	  			ID dostawy: <input id="supplyIdUpdate" type="number"/></br>
+	           	Numer dostawy: <input id="shippingNumberUpdate" type="text"/></br>
+	            Data: <input id="shippingDateUpdate" type="date"/></br>
+	            Godzina: <input id="shippingTimeUpdate" type="time"/></br>
+	            ID dostawcy: <input id="supplierIdUpdate" type="number"/></br>
+	            ID magazyniera: <input id="warehousemanIdUpdate" type="number"/></br>
+	            ID magazynu: <input id="warehouseIdUpdate" type="number"/></br>
+	            <p class="w3-center"><input type="submit" name="updateSupplySubmit" value="Edytuj!"/></p>
+	        </form>
+	  	</div>
+	  	<div id="actionRead" style="display:none">
+	  		<table align="center" id="suppliesTable">
+                <thead>
+                    <tr>
+                    	<th>ID dostawy</th>
+                        <th>Numer dostawy</th>
+                        <th>Data</th>
+                        <th>Godzina</th>
+                        <th>ID dostawcy</th>
+                        <th>ID magazyniera</th>
+                        <th>ID magazynu</th>
+                    </tr>
+                </thead>
+                <tbody id="suppliesTableBody"></tbody>
+            </table>
+	  	</div>
+	  	<div id="actionDelete" style="display:none">
+	  		<form action="javascript:deleteSupply()" method="post">
+	  			ID dostawy: <input id="supplyIdDelete" type="number"/>
+	            <p class="w3-center"><input type="submit" name="deleteSupplySubmit" value="Usuń!"/></p>
+	        </form>
+	  	</div>
+  	</div>
   </div>
 </div>
     
