--- a/src/main/webapp/html/warehousemen.html
+++ b/src/main/webapp/html/warehousemen.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script src="scripts.js"></script>
+<script src="../js/scriptsWarehousemen.js"></script>
 <style>
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
@@ -39,9 +39,54 @@ body {font-family: "Lato", sans-serif}
 
 
 <div class="w3-content" style="max-width:1920px;margin-top:46px">
-
-  <div class="w3-black" align="center" id="localization">
-  
+  <div class="w3-container w3-content w3-padding-64" align="center" id="mainContainer">
+  	<div id="buttonRow">
+  		<button type="button" onclick="javascript:actionCreate()">Dodaj</button>
+  		<button type="button" onclick="javascript:actionUpdate()">Edytuj</button>
+  		<button type="button" onclick="javascript:actionRead()">Wyświetl</button>
+  		<button type="button" onclick="javascript:actionDelete()">Usuń</button>
+  	</div>
+  	<div id="actionContent" style="margin-top:32px">
+	  	<div id="actionCreate" style="display:none">
+	  		<form action="javascript:createWarehouseman()" method="post">
+	            PESEL: <input id="peselCreate" type="text"/></br>
+	            Narodowość: <input id="nationalityCreate" type="text"/></br>
+	            Imię i nazwisko: <input id="fullNameCreate" type="text"/></br>
+	            Data zatrudnienia: <input id="employmentDateCreate" type="date"/></br>
+	            <p class="w3-center"><input type="submit" name="createWarehousemanSubmit" value="Dodaj!"/></p>
+	        </form>
+	  	</div>
+	  	<div id="actionUpdate" style="display:none">
+	  		<form action="javascript:updateWarehouseman()" method="post">
+	  			ID magazyniera: <input id="warehousemanIdUpdate" type="number"/></br>
+	           	PESEL: <input id="peselUpdate" type="text"/></br>
+	            Narodowość: <input id="nationalityUpdate" type="text"/></br>
+	            Imię i nazwisko: <input id="fullNameUpdate" type="text"/></br>
+	            Data zatrudnienia: <input id="employmentDateUpdate" type="date"/></br>
+	            <p class="w3-center"><input type="submit" name="updateWarehousemanSubmit" value="Edytuj!"/></p>
+	        </form>
+	  	</div>
+	  	<div id="actionRead" style="display:none">
+	  		<table align="center" id="warehousemenTable">
+                <thead>
+                    <tr>
+                    	<th>ID magazyniera</th>
+                        <th>PESEL</th>
+                        <th>Narodowość</th>
+                        <th>Imię i nazwisko</th>
+                        <th>Data zatrudnienia</th>
+                    </tr>
+                </thead>
+                <tbody id="warehousemenTableBody"></tbody>
+            </table>
+	  	</div>
+	  	<div id="actionDelete" style="display:none">
+	  		<form action="javascript:deleteWarehouseman()" method="post">
+	  			ID dostawy: <input id="warehousemanIdDelete" type="number"/>
+	            <p class="w3-center"><input type="submit" name="deleteWarehousemanSubmit" value="Usuń!"/></p>
+	        </form>
+	  	</div>
+  	</div>
   </div>
 </div>
     
